// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionListItem should handle an onPress function 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "transform": Array [
          Object {
            "scale": 1,
          },
        ],
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingBottom": 8,
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/600/400/?random",
              "url": "https://picsum.photos/600/400/?random",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 64,
            "marginRight": 16,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      />
    </View>
  </View>,
]
`;

exports[`ActionListItem should render 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingBottom": 8,
      }
    }
  >
    <Image
      fadeDuration={250}
      onLoad={[Function]}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/600/400/?random",
            "url": "https://picsum.photos/600/400/?random",
          },
        ]
      }
      style={
        Object {
          "backgroundColor": "#A5A5A5",
          "borderRadius": 16,
          "height": 64,
          "marginRight": 16,
          "width": 64,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    />
  </View>,
]
`;

exports[`ActionListItem should render a loading state 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "transform": Array [
          Object {
            "scale": 1,
          },
        ],
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingBottom": 8,
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/600/400/?random",
              "url": "https://picsum.photos/600/400/?random",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 64,
            "marginRight": 16,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 14,
              "marginVertical": 3.5,
              "width": "60%",
            }
          }
        />
        <View
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#A5A5A5",
              "borderRadius": 16,
              "height": 12,
              "marginVertical": 3,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </View>,
]
`;

exports[`ActionListItem should render with a label 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingBottom": 8,
      }
    }
  >
    <Image
      fadeDuration={250}
      onLoad={[Function]}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/600/400/?random",
            "url": "https://picsum.photos/600/400/?random",
          },
        ]
      }
      style={
        Object {
          "backgroundColor": "#A5A5A5",
          "borderRadius": 16,
          "height": 64,
          "marginRight": 16,
          "width": 64,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        numberOfLines={3}
        style={
          Object {
            "color": "#A5A5A5",
            "fontFamily": "InterUI-Regular",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        What
      </Text>
    </View>
  </View>,
]
`;

exports[`ActionListItem should render with a title 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingBottom": 8,
      }
    }
  >
    <Image
      fadeDuration={250}
      onLoad={[Function]}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/600/400/?random",
            "url": "https://picsum.photos/600/400/?random",
          },
        ]
      }
      style={
        Object {
          "backgroundColor": "#A5A5A5",
          "borderRadius": 16,
          "height": 64,
          "marginRight": 16,
          "width": 64,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        numberOfLines={2}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Medium",
            "fontSize": 14,
            "lineHeight": 21,
          }
        }
      >
        Boom
      </Text>
    </View>
  </View>,
]
`;

exports[`ActionListItem should render with an event 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingBottom": 8,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F4F4F5",
          "borderRadius": 16,
          "height": 64,
          "justifyContent": "center",
          "marginRight": 16,
          "width": 64,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#505050",
            "fontFamily": "InterUI-Black",
            "fontSize": 24,
            "lineHeight": 27.6,
            "marginBottom": -8,
            "textAlign": "center",
            "width": "100%",
          }
        }
      >
        2
      </Text>
      <Text
        style={
          Object {
            "color": "#505050",
            "fontFamily": "InterUI-Bold",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        Nov
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        numberOfLines={3}
        style={
          Object {
            "color": "#A5A5A5",
            "fontFamily": "InterUI-Regular",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        What
      </Text>
    </View>
  </View>,
]
`;
